--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,19 @@
 {
   "include": ["src", "types"],
   "compilerOptions": {
+    "target": "esnext",
     "module": "esnext",
+    "moduleResolution": "node",
     "lib": ["dom", "esnext"],
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "moduleResolution": "node",
     "baseUrl": "./",
     "paths": {
       "*": ["src/*", "node_modules/*"]
     },
     "esModuleInterop": true,
-    "target": "ES5"
   }
 }
